crates/kul-lsp/src/features/snapshots/kul_lsp__features__completion__tests__snapshot_after_birth_keyword.snap
---
source: crates/kul-lsp/src/features/completion/mod.rs
expression: items
---
[
  {
    "label": "m_alice_bob",
    "kind": 23,
    "detail": "Alice + Bob, 1972–1990"
  }
]
