crates/kul-lsp/src/features/snapshots/kul_lsp__features__completion__tests__snapshot_after_gender_colon.snap
---
source: crates/kul-lsp/src/features/completion/mod.rs
assertion_line: 627
expression: items
---
[
  {
    "label": "male",
    "kind": 20,
    "detail": "Male"
  },
  {
    "label": "female",
    "kind": 20,
    "detail": "Female"
  },
  {
    "label": "other",
    "kind": 20,
    "detail": "Non-binary or unspecified"
  }
]
