crates/kul-lsp/src/features/snapshots/kul_lsp__features__completion__tests__snapshot_after_marriage_id_for_spouse_a.snap
---
source: crates/kul-lsp/src/features/completion/mod.rs
expression: items
---
[
  {
    "label": "alice",
    "kind": 6,
    "detail": "Alice, b. 1950"
  },
  {
    "label": "bob",
    "kind": 6,
    "detail": "Bob, b. 1948"
  }
]
