crates/kul-lsp/src/features/snapshots/kul_lsp__features__completion__tests__snapshot_after_spouse_a_excludes_self.snap
---
source: crates/kul-lsp/src/features/completion/mod.rs
expression: items
---
[
  {
    "label": "bob",
    "kind": 6,
    "detail": "Bob, b. 1948"
  },
  {
    "label": "carol",
    "kind": 6,
    "detail": "Carol, b. 1975"
  }
]
