crates/kul-lsp/src/features/snapshots/kul_lsp__features__completion__tests__snapshot_top_level.snap
---
source: crates/kul-lsp/src/features/completion/mod.rs
expression: items
---
[
  {
    "label": "person",
    "kind": 14,
    "detail": "Declare an individual (name, gender, dates)"
  },
  {
    "label": "marriage",
    "kind": 14,
    "detail": "Declare a marriage between two people"
  }
]
